[package]
name = "kaff_sso"
description = "Small-buffer-optimized generic buffer and UTF-8 string type."
repository = "https://github.com/Pavez7274/kaff_sso"
version = "0.2.1"
edition = "2024"
license = "MIT"

[dependencies]
napi = { version = "2.16.17", features = ["napi6"], optional = true }

[features]
napi = ["dep:napi"]
